test/integration/gateway/manifests/invalidRef/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    hostname: "*.haproxy.local"
  - name: https
    protocol: HTTPS
    port: 8443
    # tls:
    #   certificateRefs:
    #   - kind: Secret
    #     group: ""
    #     name: wildcard-haproxy-local-cert
  infrastructure:
    parametersRef:
      group: gate.v3.haproxy.org
      kind: HaproxyGate
      name: haproxygate2
