test/integration/gateway/manifests/invalidRef/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: haproxy
spec:
  controllerName: gate.haproxy.org/unified-controller
  parametersRef:
    group: gate.v3.haproxy.org
    kind: HugGate
    name: huggate
    namespace: e2e-tests-gateway
